# tmd

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  simp_h1.rs  subseq.rs
src/adapters/: bluesky.rs  mod.rs  twitter.rs
