[package]
name = "tmd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["fs", "net", "macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", features = ["json", "gzip", "socks", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sysproxy = { git = "https://github.com/Seidko/sysproxy-rs.git" }
futures = "0.3"
indicatif = "0.17"
