[package]
name = "tmd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sysproxy = { git = "https://github.com/Seidko/sysproxy-rs.git" }
indicatif = "0.17"
smol = "2.0.2"
async-native-tls = { git = "https://github.com/Seidko/async-native-tls.git", branch = "unlock-deps" }
url = "2.5.2"
