[package]
name = "tmd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "net", "macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.13", features = ["json", "gzip", "socks", "stream", "query"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
sysproxy = "0.3"
futures = "0.3"
indicatif = "0.18"
bytes = "1"

[profile.dev]
opt-level = 0